RESOLVED FIXED275498
[WebGPU] Error in WGSL::prepare should be surfaced to JavaScript layer
https://bugs.webkit.org/show_bug.cgi?id=275498
Summary [WebGPU] Error in WGSL::prepare should be surfaced to JavaScript layer
Mike Wyrzykowski
Reported 2024-06-14 10:47:18 PDT
[WebGPU] Error in WGSL::prepare should be surfaced to JavaScript layer
Attachments
Radar WebKit Bug Importer
Comment 1 2024-06-14 10:47:37 PDT
Mike Wyrzykowski
Comment 2 2024-06-14 10:50:14 PDT
EWS
Comment 3 2024-06-17 09:05:12 PDT
Committed 280069@main (205babdb8798): <https://commits.webkit.org/280069@main> Reviewed commits have been landed. Closing PR #29831 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.