[WebGPU] Error in WGSL::prepare should be surfaced to JavaScript layer https://bugs.webkit.org/show_bug.cgi?id=275498 <radar://129860515>

Reviewed by Tadeu Zagallo.

Surface error from WGSL::prepare to the website.

* Source/WebGPU/WebGPU/Pipeline.mm:
(WebGPU::createLibrary):

Canonical link: https://commits.webkit.org/280069@main